--- a/MATA.Presentation.Web/MATA.Presentation.Web.csproj
+++ b/MATA.Presentation.Web/MATA.Presentation.Web.csproj
@@ -212,6 +212,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Accounts\Login.cshtml" />
+    <Content Include="Views\Shared\_TopNavbar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
