--- a/MATA.Presentation.Web/Web.config
+++ b/MATA.Presentation.Web/Web.config
@@ -13,7 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="AdminUserName" value="mata"/>
+    <add key="AdminEmail" value="info@matamimarlik.com.tr"/>
     <add key="AdminPassword" value="mata2018"/>
   </appSettings>
   <system.web>
