--- a/MATA.Data.Common/MATA.Data.Common.csproj
+++ b/MATA.Data.Common/MATA.Data.Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\MailToCcBccTypes.cs" />
     <Compile Include="Constants\RoleTypes.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
