--- a/MATA.Data.Entities/MATA.Data.Entities.csproj
+++ b/MATA.Data.Entities/MATA.Data.Entities.csproj
@@ -52,10 +52,7 @@
     <Compile Include="Account.cs">
       <DependentUpon>MataEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="BackLog.cs">
-      <DependentUpon>MataEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Brand.cs">
+    <Compile Include="Attachment.cs">
       <DependentUpon>MataEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="City.cs">
@@ -65,6 +62,15 @@
       <DependentUpon>MataEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="C__RefactorLog.cs">
+      <DependentUpon>MataEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Issue.cs">
+      <DependentUpon>MataEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Mail.cs">
+      <DependentUpon>MataEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MailAccount.cs">
       <DependentUpon>MataEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="MataEntities.Context.cs">
@@ -82,11 +88,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MataEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Project.cs">
+      <DependentUpon>MataEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Staff.cs">
+    <Compile Include="Store.cs">
       <DependentUpon>MataEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Token.cs">
+      <DependentUpon>MataEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vMailAccount.cs">
+      <DependentUpon>MataEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vMailAttachment.cs">
       <DependentUpon>MataEntities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
