--- a/MATA.BL/MATA.BL.csproj
+++ b/MATA.BL/MATA.BL.csproj
@@ -48,12 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBL.cs" />
+    <Compile Include="IssueBL.cs" />
     <Compile Include="MailAccountBL.cs" />
     <Compile Include="MailAttachmentBL.cs" />
     <Compile Include="MailBL.cs" />
     <Compile Include="Mappers\AccountMapper.cs" />
     <Compile Include="Mappers\IMapper.cs" />
+    <Compile Include="Mappers\IssueMapper.cs" />
+    <Compile Include="Mappers\ProjectMapper.cs" />
+    <Compile Include="Mappers\StoreMapper.cs" />
+    <Compile Include="ProjectBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreBL.cs" />
     <Compile Include="TokenBL.cs" />
   </ItemGroup>
   <ItemGroup>
