--- a/MATA.Presentation.Web/Views/Web.config
+++ b/MATA.Presentation.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="MATA.Presentation.Web" />
+        <add namespace="MATA.Presentation.Web.Extensions"/>
         <add namespace="MATA.Presentation.Web.Helpers" />
         <add namespace="MATA.Data.Common.Constants" />
       </namespaces>
