--- a/MATA.Presentation.Web/packages.config
+++ b/MATA.Presentation.Web/packages.config
@@ -31,5 +31,9 @@
   <package id="NLog.Config" version="4.5.0-rc04" targetFramework="net452" />
   <package id="NLog.Schema" version="4.5.0-rc04" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net452" />
+  <package id="Unity.Container" version="5.7.0" targetFramework="net452" />
+  <package id="Unity.Mvc" version="5.0.13" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
