--- a/MATA.Data.Common/MATA.Data.Common.csproj
+++ b/MATA.Data.Common/MATA.Data.Common.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Constants\MailToCcBccTypes.cs" />
     <Compile Include="Constants\RoleTypes.cs" />
+    <Compile Include="Constants\SeqNoPrefixTypes.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
