--- a/MATA.Data.Entities/MATA.Data.Entities.csproj
+++ b/MATA.Data.Entities/MATA.Data.Entities.csproj
@@ -92,6 +92,9 @@
       <DependentUpon>MataDbEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeqNo.cs">
+      <DependentUpon>MataDbEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Store.cs">
       <DependentUpon>MataDbEntities.tt</DependentUpon>
     </Compile>
@@ -129,6 +132,9 @@
       <DependentUpon>MataDbEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="vProject.cs">
+      <DependentUpon>MataDbEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vSeqNo.cs">
       <DependentUpon>MataDbEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="vStore.cs">
