--- a/MATA.Data.Repositories/MATA.Data.Repositories.csproj
+++ b/MATA.Data.Repositories/MATA.Data.Repositories.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Impls\CityRepository.cs" />
     <Compile Include="Impls\CountryRepository.cs" />
     <Compile Include="Impls\GenericRepository.cs" />
+    <Compile Include="Impls\SeqNoRepository.cs" />
     <Compile Include="Impls\StoreAccountRepository.cs" />
     <Compile Include="Impls\IssueRepository.cs" />
     <Compile Include="Impls\MailRepository.cs" />
